--- a/.github/workflows/KotlinLinter.yml
+++ b/.github/workflows/KotlinLinter.yml
@@ -1,7 +1,18 @@
-- name: Kotlin Linter
-  # You may pin to the exact commit or the version.
-  # uses: vroy/gha-kotlin-linter@772edff1ebb6ec3ecb1b56da2b808bad499856bf
-  uses: vroy/gha-kotlin-linter@v2
-  with:
-    # A list of patterns to pass along to the ktlint command
-    patterns: # optional, default is **/*.kt
+name: ktlint
+
+on:
+  pull_request:
+    paths:
+      - "**/*.kt"
+      - ".github/workflows/ktlint.yml"
+      
+jobs:
+   ktlint:
+     runs-on: ubuntu-latest
+
+     steps:
+       - name: "checkout"
+         uses: actions/checkout@v2
+
+       - name: "ktlint"
+         uses: "vroy/gha-kotlin-linter@v1"
