--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,3 +45,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+task wrapper(type: Wrapper){
+    gradleVersion = '6.5.0'
+}
+
+task prepareKotlinBuildScriptModel {
+
+}
